# bxyz-meta

./: Cargo.toml  README.md
content/: default.css
content/pages/: index.html
src/: cli.rs  init.rs  main.rs  paths.rs  routes.rs
templates/: music_dump.html
