[package]
name = "bxyz-meta"
version = "0.1.0"
edition = "2021"
authors = [ "Blacepos" ]

[dependencies]
clap = { version = "*", features = ["derive"] }
flexi_logger = "*"
log = "*"
tokio = { version = "*", features = ["full"] }
axum = "*"
tower = "*"
tower-http = { version = "*", features = ["trace", "fs"] }
slot = { path = "../slot" }
tera = "*"
serde = { version = "1.0.228", features = ["derive"] }
